---
source: crates/pgls_completions/src/test_helper.rs
expression: final_snapshot
snapshot_kind: text
---
***Setup***

create table instruments (
    id bigint primary key generated always as identity,
    name text not null,
    z text
);

create table others (
    id serial primary key,
    a text,
    b text
);


--------------

***Case 1:***

i|
insert |
insert i|
insert into |

Results:
instruments - public.instruments (Table)
others - public.others (Table)
_sqlx_migrations - public._sqlx_migrations (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)

--------------

insert into i|

Results:
instruments - public.instruments (Table)
information_schema - information_schema (Schema)
information_schema.information_schema_catalog_name - information_schema.information_schema_catalog_name (Table)
public - public (Schema)
pg_catalog.pg_ident_file_mappings - pg_catalog.pg_ident_file_mappings (Table)

--------------

insert into instruments |
insert into instruments (|
insert into instruments (|)

Results:
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
a - public.others.a (Column)
b - public.others.b (Column)

--------------

insert into instruments (i|)

Results:
id - public.instruments.id (Column)
ident - pg_catalog.pg_backend_memory_contexts.ident (Column)
identity_cycle - information_schema.columns.identity_cycle (Column)
identity_generation - information_schema.columns.identity_generation (Column)
identity_increment - information_schema.columns.identity_increment (Column)

--------------

insert into instruments (id, |)

Results:
name - public.instruments.name (Column)
z - public.instruments.z (Column)
id - public.instruments.id (Column)
a - public.others.a (Column)
b - public.others.b (Column)

--------------

insert into instruments (id, n|)

Results:
name - public.instruments.name (Column)
n_dead_tup - pg_catalog.pg_stat_all_tables.n_dead_tup (Column)
n_distinct - pg_catalog.pg_stats.n_distinct (Column)
n_ins_since_vacuum - pg_catalog.pg_stat_all_tables.n_ins_since_vacuum (Column)
n_live_tup - pg_catalog.pg_stat_all_tables.n_live_tup (Column)

--------------

insert into instruments (id, name) |
insert into instruments (id, name) v|
insert into instruments (id, name) values |
insert into instruments (id, name) values (|
insert into instruments (id, name) values (|)

Results:
z - public.instruments.z (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
a - public.others.a (Column)
b - public.others.b (Column)

--------------

insert into instruments (id, name) values (1|)
insert into instruments (id, name) values (1, |)

Results:
z - public.instruments.z (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
a - public.others.a (Column)
b - public.others.b (Column)

--------------

insert into instruments (id, name) values (1, '|)
insert into instruments (id, name) values (1, 'my_bass'); |




***Case 2:***

i|
insert |
insert i|
insert into |

Results:
instruments - public.instruments (Table)
others - public.others (Table)
_sqlx_migrations - public._sqlx_migrations (Table)
information_schema - information_schema (Schema)
pg_catalog - pg_catalog (Schema)

--------------

insert into i|

Results:
instruments - public.instruments (Table)
information_schema - information_schema (Schema)
information_schema.information_schema_catalog_name - information_schema.information_schema_catalog_name (Table)
public - public (Schema)
pg_catalog.pg_ident_file_mappings - pg_catalog.pg_ident_file_mappings (Table)

--------------

insert into instruments |
insert into instruments (|
insert into instruments (|)

Results:
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
a - public.others.a (Column)
b - public.others.b (Column)

--------------

insert into instruments (i|)

Results:
id - public.instruments.id (Column)
ident - pg_catalog.pg_backend_memory_contexts.ident (Column)
identity_cycle - information_schema.columns.identity_cycle (Column)
identity_generation - information_schema.columns.identity_generation (Column)
identity_increment - information_schema.columns.identity_increment (Column)

--------------

insert into instruments ("id", |)

Results:
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
a - public.others.a (Column)
b - public.others.b (Column)

--------------

insert into instruments ("id", "|)

Results:
id" - public.instruments.id (Column)
name" - public.instruments.name (Column)
z" - public.instruments.z (Column)
a" - public.others.a (Column)
b" - public.others.b (Column)

--------------

insert into instruments ("id", "|")

Results:
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
a - public.others.a (Column)
b - public.others.b (Column)

--------------

insert into instruments ("id", "n|")

Results:
name - public.instruments.name (Column)
n_dead_tup - pg_catalog.pg_stat_all_tables.n_dead_tup (Column)
n_distinct - pg_catalog.pg_stats.n_distinct (Column)
n_ins_since_vacuum - pg_catalog.pg_stat_all_tables.n_ins_since_vacuum (Column)
n_live_tup - pg_catalog.pg_stat_all_tables.n_live_tup (Column)

--------------

insert into instruments ("id", "name") |
insert into instruments ("id", "name") v|
insert into instruments ("id", "name") values |
insert into instruments ("id", "name") values (|
insert into instruments ("id", "name") values (|)

Results:
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
a - public.others.a (Column)
b - public.others.b (Column)

--------------

insert into instruments ("id", "name") values (1|)
insert into instruments ("id", "name") values (1, |)

Results:
id - public.instruments.id (Column)
name - public.instruments.name (Column)
z - public.instruments.z (Column)
a - public.others.a (Column)
b - public.others.b (Column)

--------------

insert into instruments ("id", "name") values (1, '|)
insert into instruments ("id", "name") values (1, 'my_bass'); |




***Case 3:***

insert into instruments (|, name) values ('my_bass');

Results:
id - public.instruments.id (Column)
z - public.instruments.z (Column)
name - public.instruments.name (Column)
a - public.others.a (Column)
b - public.others.b (Column)

--------------

insert into instruments (i|, name) values ('my_bass');

Results:
id - public.instruments.id (Column)
ident - pg_catalog.pg_backend_memory_contexts.ident (Column)
identity_cycle - information_schema.columns.identity_cycle (Column)
identity_generation - information_schema.columns.identity_generation (Column)
identity_increment - information_schema.columns.identity_increment (Column)

--------------

insert into instruments (id, |, name) values ('my_bass');
**`name` is already written, so z should be suggested.**

Results:
z - public.instruments.z (Column)
id - public.instruments.id (Column)
name - public.instruments.name (Column)
a - public.others.a (Column)
b - public.others.b (Column)

--------------

insert into instruments (id, z |, name) values ('my_bass');
